--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <!--  app-header class="header"></app-header>
 <router-outlet></router-outlet> -->
 
+<!-- <app-header *ngIf="isLoggedIn()"></app-header> -->
 <app-header *ngIf="isLoggedIn()"></app-header>
 <router-outlet></router-outlet>
           
