mantenimiento modelo, proveedor, repuesto y paginacion en todos los mantenimientos

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,6 +31,7 @@
             <li><a (click)='principalMarca()'>Marcas</a></li>
             <li><a (click)='principalModelo()'>Modelos</a></li>
             <li><a (click)='principalProveedor()'>Proveedores</a></li>
+            <li><a (click)='principalRepuesto()'>Repuestos</a></li>
             <li><a (click)='logOut()'>Salir</a></li>
         </ul>
     </div>
