--- a/src/app/repuestos/repuestos-list.component.html
+++ b/src/app/repuestos/repuestos-list.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col s12">
-        <h5 class="left">Administraci&oacute;n de Proveedores</h5>
-        <a style="margin-top:15.853px" class="btn-floating purple darken-4 modal-trigger" ><i class="material-icons" (click)='agregarProveedor()'>add</i></a>
+        <h5 class="left">Administraci&oacute;n de Repuestos</h5>
+        <a style="margin-top:15.853px" class="btn-floating purple darken-4 modal-trigger" ><i class="material-icons" (click)='agregarRepuesto()'>add</i></a>
         <span style="clear:both"></span>
-        <a style="margin-top:15.853px" class="btn-floating yellow darken-1" ><i class="material-icons" (click)='editarProveedor()'>edit</i></a>
+        <a style="margin-top:15.853px" class="btn-floating yellow darken-1" ><i class="material-icons" (click)='editarRepuesto()'>edit</i></a>
         <span style="clear:both"></span>
-        <a style="margin-top:15.853px" class="btn-floating blue modal-trigger" ><i class="material-icons" (click)='verProveedor()'>visibility</i></a>
+        <a style="margin-top:15.853px" class="btn-floating blue modal-trigger" ><i class="material-icons" (click)='verRepuesto()'>visibility</i></a>
         <span style="clear:both"></span>
     </div>
   </div>
   <div class="row">
     <div class="col s12">
-        <p-table [columns]="cols" [value]="proveedores" [paginator]="true" [rows]="3"   [responsive]="true" [(selection)]="_proveedorSelected" dataKey="nombre">
+        <p-table [columns]="cols" [value]="repuestos" [paginator]="true" [rows]="3"   [responsive]="true" [(selection)]="_repuestoSelected" dataKey="nombre">
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th style="width: 3em">
@@ -34,8 +34,8 @@
             </ng-template>
             <ng-template pTemplate="summary">
                 <ul>
-                    <li *ngFor="let prov of _proveedorSelected" style="text-align: left">
-                        {{prov.id + ' - ' + prov.nombre}}
+                    <li *ngFor="let rep of _repuestoSelected" style="text-align: left">
+                        {{rep.id + ' - ' + rep.nombrerepuesto}}
                     </li>
                 </ul>
             </ng-template>
@@ -43,11 +43,11 @@
     </div>
   </div>
   
-  <!-- MODAL PARA AGREGAR PROVEEDOR -->
+  <!-- MODAL PARA AGREGAR REPUESTO -->
   <p-dialog [(visible)]="displayDialog" [contentStyle]="{'overflow':'visible'}" [responsive]="true" [showHeader]="true" showEffect="fade" [modal]="true" [style]="{width: '720px', height: '48px'}">
     <div class="ui-grid ui-grid-responsive ui-fluid">
-        <h5 class="modal-title">Ingrese un nuevo proveedor</h5>
-             <form [formGroup]="registrarProvForm">
+        <h5 class="modal-title">Ingrese un nuevo repuesto</h5>
+             <form [formGroup]="registrarRepForm">
             <p-panel [showHeader]="false">
               <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                     <div class="input-field">
@@ -55,16 +55,16 @@
                         <label for="name">Nombre</label>
                     </div>
                     <div class="input-field">
-                        <input type="text" id="direccion" formControlName="direccion" class="validate"/>
-                        <label for="direccion">Direccion</label>
+                        <input type="text" id="valor" formControlName="valor" class="validate"/>
+                        <label for="direccion">Valor</label>
                     </div>
                     <div class="input-field">
                         <label for="estadoUsuario">Estado</label><br/><br/>
-                        <p-dropdown [options]="estadosProveedor" formControlName="estadoProveedor" [(ngModel)]="_estadoProveedor" class="validate"></p-dropdown>
-                        <p>Estado seleccionado: {{_estadoProveedor ? _estadoProveedor : 'none'}}</p>
+                        <p-dropdown [options]="estadosRepuesto" formControlName="estadoRepuesto" [(ngModel)]="_estadoRepuesto" class="validate"></p-dropdown>
+                        <p>Estado seleccionado: {{_estadoRepuesto ? _estadoRepuesto : 'none'}}</p>
                     </div>
                     <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarProveedor()">Guardar
+                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarRepuesto()">Guardar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
@@ -74,29 +74,29 @@
     </div>
   </p-dialog>
   
-  <!-- MODAL PARA EDITAR PROVEEDOR -->
-  <p-dialog [(visible)]="dialogEditProv" [contentStyle]="{'overflow':'visible'}" [responsive]="true" [showHeader]="true" showEffect="fade" [modal]="true" [style]="{width: '720px', height: '48px'}">
+  <!-- MODAL PARA EDITAR REPUESTO -->
+  <p-dialog [(visible)]="dialogEditRep" [contentStyle]="{'overflow':'visible'}" [responsive]="true" [showHeader]="true" showEffect="fade" [modal]="true" [style]="{width: '720px', height: '48px'}">
         <div class="ui-grid ui-grid-responsive ui-fluid">
             <!-- <h5 class="modal-title">Actualizacion de usuario</h5> -->
-                 <form [formGroup]="updateProvForm">
+                 <form [formGroup]="updateRepForm">
                 <p-panel [showHeader]="false">
                   <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                         <div class="input-field">
-                            <input pInputText id="idProv" formControlName="idProv" style="visibility:hidden"/>
+                            <input pInputText id="idRep" formControlName="idRep" style="visibility:hidden"/>
                         </div>
                         <div class="input-field">
                             <input type="text" id="nombre" formControlName="nombre" class="validate"/>
                         </div>
                         <div class="input-field">
-                            <input type="text" id="direccion" formControlName="direccion" class="validate"/>
+                            <input type="text" id="valor" formControlName="valor" class="validate"/>
                         </div>
                         <div class="input-field">
                             <label for="estadoTaller">Estado</label><br/><br/>
-                            <p-dropdown [options]="estadosProveedor" formControlName="estadoProveedor" [(ngModel)]="_estadoProveedor" class="validate"></p-dropdown>
-                            <p>Estado seleccionado: {{_estadoProveedor ? _estadoProveedor : 'none'}}</p>
+                            <p-dropdown [options]="estadosRepuesto" formControlName="estadoRepuesto" [(ngModel)]="_estadoRepuesto" class="validate"></p-dropdown>
+                            <p>Estado seleccionado: {{_estadoRepuesto ? _estadoRepuesto : 'none'}}</p>
                         </div>
                         <div class="input-field">
-                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarProveedor()">Actualizar
+                            <button class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarRepuesto()">Actualizar
                                 <i class="material-icons right">send</i>
                             </button>
                         </div>
@@ -104,25 +104,23 @@
                 </p-panel> 
             </form> 
         </div>
-      </p-dialog>
+      </p-dialog> 
 
-  <!-- MODAL PARA ELIMINAR TALLER -->
-
-  <!-- MODAL PARA VISUALIZAR PROVEEDOR -->
-  <p-dialog [(visible)]="dialogVerProv" [contentStyle]="{'overflow':'visible'}" [responsive]="true" [showHeader]="true" showEffect="fade" [modal]="true" [style]="{width: '720px', height: '48px'}">
+  <!-- MODAL PARA VISUALIZAR REPUESTOS -->
+  <p-dialog [(visible)]="dialogVerRep" [contentStyle]="{'overflow':'visible'}" [responsive]="true" [showHeader]="true" showEffect="fade" [modal]="true" [style]="{width: '720px', height: '48px'}">
       <div class="ui-grid ui-grid-responsive ui-fluid">
           <!-- <h5 class="modal-title">Informacion de taller</h5> -->
-               <form [formGroup]="verProvForm">
+               <form [formGroup]="verRepForm">
               <p-panel [showHeader]="false">
                 <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                     <h5 class="valign-wrapper">
                         <i class="material-icons" style="margin-right: 10px">account_circle</i><input type="text" id="nombre" formControlName="nombre" class="validate" disabled/>
                     </h5>
                     <div class="input-field">
-                        <input type="text" id="direccion" formControlName="direccion" class="validate" disabled/>
+                        <input type="text" id="valor" formControlName="valor" class="validate" disabled/>
                     </div>
                     <div class="input-field">
-                        <input type="text" id="estadoP" formControlName="estadoProveedor" class="validate" disabled/>
+                        <input type="text" id="estadoR" formControlName="estadoRepuesto" class="validate" disabled/>
                     </div>
                     <div class="input-field">
                         <input type="text" id="fechaC" formControlName="fechaCreacion" class="validate" disabled/>
