--- a/src/app/aseguradora/aseguradora-list.component.html
+++ b/src/app/aseguradora/aseguradora-list.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="row">
     <div class="col s12">
-        <p-table [columns]="cols" [value]="aseguradoras" [(selection)]="_aseguradoraSelected" dataKey="nombre">
+        <p-table [columns]="cols" [value]="aseguradoras" [paginator]="true" [rows]="3"   [responsive]="true" [(selection)]="_aseguradoraSelected" dataKey="nombre">
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th style="width: 3em">
