--- a/src/app/marca/marca-list.component.html
+++ b/src/app/marca/marca-list.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="row">
     <div class="col s12">
-        <p-table [columns]="cols" [value]="marcas" [(selection)]="_marcaSelected" dataKey="nombre">
+        <p-table [columns]="cols" [value]="marcas" [paginator]="true" [rows]="3"   [responsive]="true" [(selection)]="_marcaSelected" dataKey="nombre">
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th style="width: 3em">
