--- a/src/app/taller/taller-list.component.html
+++ b/src/app/taller/taller-list.component.html
@@ -32,7 +32,7 @@
       </span> -->
   <div class="row">
     <div class="col s12">
-        <p-table [columns]="cols" [value]="talleres" [(selection)]="_tallerSelected" dataKey="nombre">
+        <p-table [columns]="cols" [value]="talleres" [paginator]="true" [rows]="3"   [responsive]="true" [(selection)]="_tallerSelected" dataKey="nombre">
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th style="width: 3em">
