--- a/src/app/aseguradora/aseguradora-list.component.html
+++ b/src/app/aseguradora/aseguradora-list.component.html
@@ -10,6 +10,7 @@
   </div>
   <div class="row">
     <div class="col s12">
+            <p-growl [value]="msgs" sticky="sticky"></p-growl>
         <p-table [columns]="cols" [value]="aseguradoras" [paginator]="true" [rows]="3"   [responsive]="true" [(selection)]="_aseguradoraSelected" dataKey="nombre">
             <ng-template pTemplate="header" let-columns>
                 <tr>
