--- a/src/app/modelo/modelo-list.component.html
+++ b/src/app/modelo/modelo-list.component.html
@@ -11,6 +11,7 @@
   </div>
   <div class="row">
     <div class="col s12">
+        <p-growl [value]="msgs" sticky="sticky"></p-growl>
         <p-table [columns]="cols" [value]="modelosView" [paginator]="true" [rows]="10" [responsive]="true" totalRecords="100" [(selection)]="_modeloSelected" dataKey="nombre">
             <ng-template pTemplate="header" let-columns>
                 <tr>
