--- a/src/app/users/user-list.component.html
+++ b/src/app/users/user-list.component.html
@@ -51,6 +51,7 @@
           </tr>
           </tbody>
       </table> -->
+      <p-growl [value]="msgs" sticky="sticky"></p-growl>
       <p-table [columns]="cols" [value]="usuariosView" [paginator]="true" [rows]="10" [responsive]="true" totalRecords="100"  [(selection)]="_usuarioSelected" dataKey="nombre">
           <ng-template pTemplate="header" let-columns>
               <tr>
