Ajuste mante taller, aseguradora, proveedor (nuevos campos BDs)

--- a/src/app/aseguradora/aseguradora-list.component.html
+++ b/src/app/aseguradora/aseguradora-list.component.html
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col s12">
             <p-growl [value]="msgs" sticky="sticky"></p-growl>
-        <p-table [columns]="cols" [value]="aseguradoras" [paginator]="true" [rows]="3"   [responsive]="true" [(selection)]="_aseguradoraSelected" dataKey="nombre">
+        <p-table [columns]="cols" [value]="aseguradoras" [paginator]="true" [rows]="6"   [responsive]="true" [(selection)]="_aseguradoraSelected" dataKey="nombre">
             <ng-template pTemplate="header" let-columns>
                 <tr>
                     <th style="width: 3em">
@@ -46,7 +46,7 @@
   <!-- MODAL PARA AGREGAR ASEGURADORA -->
   <p-dialog [(visible)]="displayDialog" [contentStyle]="{'overflow':'visible'}" [responsive]="true" [showHeader]="true" showEffect="fade" [modal]="true" [style]="{width: '720px', height: '48px'}">
     <div class="ui-grid ui-grid-responsive ui-fluid">
-        <h5 class="modal-title">Ingrese un nuevo taller</h5>
+        <h5 class="modal-title">Ingrese una aseguradora</h5>
              <form [formGroup]="registrarAseguradoraForm">
             <p-panel [showHeader]="false">
               <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
@@ -55,9 +55,30 @@
                         <label for="name">Nombre</label>
                     </div>
                     <div class="input-field">
+                        <input type="text" id="razonSocial" formControlName="razonSocial" class="validate"/>
+                        <label for="razonSocial">Razon Social</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="text" id="nit" formControlName="nit" class="validate"/>
+                        <label for="nit">NIT</label>
+                    </div>
+                    <div class="input-field">
+                        <input type="text" id="iva" formControlName="iva" class="validate"/>
+                        <label for="iva">IVA</label>
+                    </div>
+                    <div class="input-field" style="display:inline-block;padding: 5px;">
                         <label for="estadoAseguradora">Estado</label><br/><br/>
                         <p-dropdown [options]="estadosAseguradora" formControlName="estadoAseguradora" [(ngModel)]="_estadoAseguradora" class="validate"></p-dropdown>
                         <p>Estado seleccionado: {{_estadoAseguradora ? _estadoAseguradora : 'none'}}</p>
+                    </div>
+                    <div class="input-field" style="display:inline-block;padding: 20px;">
+                        <label for="usuario">Usuario</label><br/><br/>
+                        <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate"></p-dropdown>
+                        <p>Usuario seleccionado: {{_userSeleccionado ? _userSeleccionado.nombre : 'none'}}</p>
+                    </div>
+                    <div class="input-field" style="display:inline-block;padding: 20px;">
+                        <input type="text" id="cargo" formControlName="cargo" class="validate"/>
+                        <label for="usuario">cargo</label><br/><br/>
                     </div>
                     <div class="input-field">
                             <button class="btn waves-effect waves-light" type="submit" name="action" (click)="guardarAseguradora()">Guardar
@@ -85,9 +106,31 @@
                             <!-- <label for="name">Nombre</label> -->
                         </div>
                         <div class="input-field">
+                            <input type="text" id="razonSocial" formControlName="razonSocial" class="validate"/>
+                            <!-- <label for="name">Nombre</label> -->
+                        </div>
+                        <div class="input-field">
+                            <input type="text" id="nit" formControlName="nit" class="validate"/>
+                            <!-- <label for="name">Nombre</label> -->
+                        </div>
+                        <div class="input-field">
+                            <input type="text" id="iva" formControlName="iva" class="validate"/>
+                            <!-- <label for="name">Nombre</label> -->
+                        </div>
+                        
+                        <div class="input-field" style="display:inline-block;padding: 20px;">
                             <label for="estadoTaller">Estado</label><br/><br/>
                             <p-dropdown [options]="estadosAseguradora" formControlName="estadoAseg" [(ngModel)]="_estadoAseguradora" class="validate"></p-dropdown>
                             <p>Estado seleccionado: {{_estadoAseguradora ? _estadoAseguradora : 'none'}}</p>
+                        </div>
+                        <div class="input-field" style="display:inline-block;padding: 20px;">
+                            <label for="usuario">Usuario</label><br/><br/>
+                            <p-dropdown [options]="usuariosList" formControlName="usuario" [(ngModel)]="_userSeleccionado" class="validate"></p-dropdown>
+                            <p>Usuario seleccionado: {{_userSeleccionado ? _userSeleccionado.nombre : 'none'}}</p>
+                        </div>
+                        <div class="input-field" style="display:inline-block;padding: 20px;">
+                            <input type="text" id="cargo" formControlName="cargo" class="validate"/>
+                            <label for="usuario">cargo</label><br/><br/>
                         </div>
                         <div class="input-field">
                             <button class="btn waves-effect waves-light" type="submit" name="action" (click)="actualizarAseguradora()">Actualizar
@@ -112,7 +155,27 @@
                     </h5>
                     <div class="input-field">
                         <!-- <label for="tipoUsuario">Estado</label><br/><br/> -->
+                        <input type="text" id="razonSocial" formControlName="razonSocial" class="validate" disabled/>
+                    </div>
+                    <div class="input-field">
+                        <!-- <label for="tipoUsuario">Estado</label><br/><br/> -->
+                        <input type="text" id="nit" formControlName="nit" class="validate" disabled/>
+                    </div>
+                    <div class="input-field">
+                        <!-- <label for="tipoUsuario">Estado</label><br/><br/> -->
+                        <input type="text" id="iva" formControlName="iva" class="validate" disabled/>
+                    </div>
+                    <div class="input-field">
+                        <!-- <label for="tipoUsuario">Estado</label><br/><br/> -->
                         <input type="text" id="estadoA" formControlName="estadoAseguradora" class="validate" disabled/>
+                    </div>
+                    <div class="input-field">
+                        <!-- <label for="tipoUsuario">Estado</label><br/><br/> -->
+                        <input type="text" id="usuario" formControlName="usuario" class="validate" disabled/>
+                    </div>
+                    <div class="input-field">
+                        <!-- <label for="tipoUsuario">Estado</label><br/><br/> -->
+                        <input type="text" id="cargo" formControlName="cargo" class="validate" disabled/>
                     </div>
                     <div class="input-field">
                         <!-- <label for="tipoUsuario">Estado</label><br/><br/> -->
