--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,6 +32,7 @@
             <li><a (click)='principalModelo()'>Modelos</a></li>
             <li><a (click)='principalProveedor()'>Proveedores</a></li>
             <li><a (click)='principalRepuesto()'>Repuestos</a></li>
+            <li><a (click)='principalStar()'>Star</a></li>
             <li><a (click)='logOut()'>Salir</a></li>
         </ul>
     </div>
