--- a/src/app/shared/star.component.html
+++ b/src/app/shared/star.component.html
@@ -1,4 +1,46 @@
-<div class="crop"
+  <div class="row">
+    <div class="col s12">
+        <h3>Aseguradoras</h3>
+        <p-autoComplete [(ngModel)]="aseg" [suggestions]="filtrado"  customUpload="true" (uploadHandler)="onFileUpload($event)" [size]="30" [minLength]="1" [dropdown]="true" >
+            <ng-template let-aseg pTemplate="item">
+                <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
+                    <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{aseg}}</div>
+                </div>
+            </ng-template>
+        </p-autoComplete>
+        <span style="margin-left:50px"> {{aseg||'none'}}</span>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col s12">
+        <h3>Carga de archvos</h3>
+        <p-fileUpload name="myfile[]" url="C:\Proyectos\original\aseguradora\aseguradora\src\app\upload" withCredentials="false" customUpload="true" (uploadHandler)="addHeaders($event)" method="POST" multiple="multiple" accept="image/*">
+          <!-- <p-fileUpload name="myfile[]" url="././upload" (onUpload)="onUpload($event)" multiple="multiple" accept="image/*"> -->
+          <ng-template pTemplate="content">
+            <ul *ngIf="uploadedFiles.length">
+                <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
+            </ul>
+        </ng-template></p-fileUpload>
+    </div>
+  </div>
+
+  
+<!-- ********************************************************************************************************* -->
+<!-- 
+<p-autoComplete [(ngModel)]="brand" [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" [size]="30"
+    [minLength]="1" placeholder="Hint: type 'v' or 'f'" [dropdown]="true">
+    <ng-template let-brand pTemplate="item">
+        <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
+            <img src="assets/showcase/images/demo/car/{{brand}}.png" style="width:32px;display:inline-block;margin:5px 0 2px 5px"/>
+            <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{brand}}</div>
+        </div>
+    </ng-template>
+</p-autoComplete>
+<span style="margin-left:50px">Brand: {{brand||'none'}}</span>
+-->
+
+<!-- <div class="crop"
      [style.width.px]="starWidth"
      [title]="rating"
      (click)="onClick()">
@@ -9,4 +51,4 @@
     <span class="fa fa-star"></span>
     <span class="fa fa-star"></span>
   </div>
-</div>
+</div> -->
